--- a/tl2-tp10-2023-EnzoPeralta96.csproj
+++ b/tl2-tp10-2023-EnzoPeralta96.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
-    <Nullable>desable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>tl2_tp10_2023_EnzoPeralta96</RootNamespace>
   </PropertyGroup>
